--- a/templates/public/hotbox.js.twig
+++ b/templates/public/hotbox.js.twig
@@ -1,5 +1,5 @@
 function HotBox() {
-    this.SERVERURL = "{{ settings.serverurl|raw }}";
+    this.SERVERURL = "{{ settings.get('server_url').value|raw }}";
 
     this.init = function() {
         const collection = document.getElementsByClassName("hotbox");
