--- a/templates/admin/managemedia.html.twig
+++ b/templates/admin/managemedia.html.twig
@@ -23,8 +23,13 @@
         <div class="row">
             <div class="col-3"><img src="{{ file.path }}" class="img-fluid" alt="{{ file.file }}"></div>
             <div class="col">{{ file.file }}</div>
-            <div class="col-3">{{ file.upload }}</div>
-            <div class="col-1"><a class="btn btn-danger" href="{{ url('app_deletemedia', { file: file.file }) }}"><i class="fas fa-trash"></i></a></div>
+            <div class="col-3">{{ file.upload|date('Y-m-d H:i') }}</div>
+            <div class="col-1">
+                <div class=" btn-group">
+                    <a class="btn btn-primary copy-data" data-type="Image path" data-copy="{{ settings.get('server_url').value|trim('/') }}/{{ file.path|trim('/') }}"><i class="fas fa-copy"></i></a>
+                    <a class="btn btn-danger" href="{{ url('app_deletemedia', { file: file.file }) }}"><i class="fas fa-trash"></i></a>
+                </div>
+            </div>
         </div>
     {% endfor %}
     </div>
