--- a/templates/comic/create.html.twig
+++ b/templates/comic/create.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Create/Edit Comic{% endblock %}
 
 {% block body %}
+<div class="container">
     <div class="col align-items-center justify-content-center pt-5">
         <div class="col-10" id="register-staff-screen">
             <div class="row">
@@ -90,6 +91,7 @@
             {% endif %}
         </div>
     </div>
+</div>
 {% endblock %}
 
 
