--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,22 +1,38 @@
+{% set headeroffset = "-8 offset-2" %}
 {% extends 'base.html.twig' %}
 
 {% block title %}Reset your password{% endblock %}
 
 {% block body %}
+<div class="container">
+    <div class="card mt-5 p-3 col-8 offset-2">
+        <div class="row" id="register-staff-screen">
+            <div class="col  p-3">
     {% for flash_error in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
     <h1>Reset your password</h1>
 
     {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
-        <div>
-            <small>
-                Enter your email address, and we will send you a
-                link to reset your password.
-            </small>
+        <div class="row mb-2">
+            {{ form_label(requestForm.email) }}
+            <div class="col">{{ form_widget(requestForm.email) }}</div>
         </div>
-
-        <button class="btn btn-primary">Send password reset email</button>
+        <div class="row mb-2">
+            <div  class="offset-3 col">
+                <small>
+                    Enter your email address, and we will send you a
+                    link to reset your password.
+                </small>
+            </div>
+        </div>
+        <div class="row mb-2">
+            <div  class="offset-3 col">
+                <button class="btn btn-primary">Send password reset email</button>
+            </div>
+        </div>
     {{ form_end(requestForm) }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
