--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,3 +1,4 @@
+{% set headeroffset = "-8 offset-2" %}
 {% extends 'base.html.twig' %}
 
 {% block title %}Log in!{% endblock %}
@@ -17,20 +18,32 @@
             You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <div class="row mb-2">
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    </div>
+    <div class="row mb-2">
+        <label for="inputEmail" class="col-form-label col-3 text-end">Email:</label>
+        <div class="col">
+            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+        </div>
+    </div>
+    <div class="row mb-2">
+    <label for="inputPassword" class="col-form-label col-3 text-end">Password:</label>
+        <div class="col">
+            <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+        </div>
+    </div>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+    <div class="row mb-2">
+        <div class="col offset-3">
+            <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
+        </div>
+        <div class="col-3 text-end">
+            <a href="{{ url('app_forgot_password_request') }}">Forgot your password?</a>
+        </div>
 </form>
             </div>
         </div>
